# find_stack

./: .env  Dockerfile  docker-compose.yaml  pyproject.toml
src/: main.py
src/api/: movie.py
src/db/: session.py
src/dependency/: dependencies.py
src/find_stack/: settings.py
src/models/: movie.py
src/schemas/: movie.py
src/services/: crud.py  movie.py
